--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 </head>
 <body>
     
+<h1>JavaScript Learning</h1>
+<hr>
 
-
-    <script src="functions.js"></script>
+    <script src="01_Variables.js"></script>
 </body>
 </html>
