--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 <h1>JavaScript Learning</h1>
 <hr>
 
-    <script src="promises.js"></script>
+    <script src="firstProgram.js"></script>
 </body>
 </html>
