--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <h1>JavaScript Learning</h1>
 <hr>
 
-    <script src="firstProgram.js"></script>
+    <div id="output"></div>
+
+    <script src="07_Loops.js"></script>
 </body>
 </html>
