--- a/index.html
+++ b/index.html
@@ -4,14 +4,69 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Learning JavaScript</title>
+    <style>
+        .box{
+            width: 200px;
+            height: 200px;
+            border: 2px solid black;
+        }
+    </style>
 </head>
 <body>
     
 <h1>JavaScript Learning</h1>
 <hr>
+<!-- 
+<div id="demo">
+    Welcome <span style="display:none;">Venkatesh</span>
+  </div>
 
-    <div id="output"></div>
+  <p id="message">Hello User!</p> -->
 
-    <script src="07_Loops.js"></script>
+
+
+  <!-- <input type="text" placeholder="Enter your Name" id="name">
+  <button id="greet">Greet</button>
+  <p id="greeting"></p> -->
+
+
+  <div class="box"></div>
+<br><br>
+  <input type="text" id="myInput" placeholder="Type here..." />
+<br>
+<br>
+  <button id="btn">Click Me</button>
+
+
+  <!-- ============================================= -->
+
+  <div class="box">
+
+  </div>
+
+
+  <hr>
+  <br>
+  <br>
+  <button class="btn">button1</button>
+  <button class="btn">button2</button>
+  <button class="btn">button3</button>
+
+
+  <hr>
+  <br>
+  <br>
+  <p id="para">Hover me</p>
+
+  <hr>
+  <br>
+  <br>
+  <br>
+
+  <input type="text" id="input"/>
+  <div id="text"> </div>
+
+
+    <script src="25_EventHandling.js"></script>
 </body>
 </html>
