--- a/DOM Mini Projects/Todo List/index.html
+++ b/DOM Mini Projects/Todo List/index.html
@@ -8,16 +8,19 @@
 </head>
 <body>
     <div class="container">
-    <div class="task-creation">
+    <!-- <div class="task-creation">
         <input type="text" placeholder="Enter a Task" id="task-input">
         <button id="sub-btn">Submit</button>
-    </div>
+    </div> -->
     <div class="task-container">
-        <ul>
-            <li>Task1</li>
-            <button>remove</button>
-        </ul>
+        <input type="text" id="itemInput" placeholder="Enter item" />
+        <button id="addBtn">Add Item</button>
+        
+        <ul id="itemList"></ul>
     </div>
     </div>
+
+
+    <script src="script.js"></script>
 </body>
 </html>
