--- a/Todo List/index.html
+++ b/Todo List/index.html
@@ -3,114 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TO-DO List App</title>
-    <style>
-        body{
-            width: 100%;
-            height: 100vh;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            flex-direction: column;
-        }
-        .container{
-            width: 70%;
-            height: 90%;
-            background-color: aqua;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            padding: 20px;
-            gap: 20px;
-        }
-        .input-field{
-            width: 100%;
-            height: auto;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            gap: 10px;
-        }
-        .input-field input{
-            width: 70%;
-            height: 40px;
-        }
-        .input-field button{
-            height: 100%;
-            padding: 0 20px;
-        }
-        .task-container{
-            width: 100%;
-            height: 80%;
-            background-color: azure;
-        }
-        ul{
-            display: flex;
-            gap: 20px;
-            align-items: center;
-            justify-content: space-between;
-            padding: 0 20px;
-            list-style: none;
-        }
-        ul li{
-            font-size: 20px;
-            font-weight: 700;
-        }
-        ul button{
-            padding: 5px 10px;
-        }
-
-    </style>
+    <title>Todo List</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- <h1>TODO</h1> -->
     <div class="container">
-        <div class="input-field">
-            <input type="text" placeholder="Enter task here..." id="task-input">
-            <button id="submit">Submit</button>
+        <div class="input-container">
+            <input type="text" id="input-box">
+            <button onclick="addTask()" id="add">Add</button>
         </div>
-        <div class="task-container">
-            <ul id="task-list">
-                <!-- <li id="task">task 1</li>
-                <button id="remove">Remove</button> -->
-            </ul>
-            
-        </div>
+        <ul id="list-container">
+            <!-- <li>Task 1</li>
+            <li>Task 2</li>
+            <li>Task 3</li> -->
+        </ul>
     </div>
 
 
-    <script>
-
-        const task_input = document.getElementById('task-input');
-        const submit = document.getElementById('submit');
-        const task_list = document.getElementById('task-list');
-        // const task = document.getElementById('task');
-        // const remove = document.getElementById('remove');
-
-
-        submit.addEventListener('click',(e) =>{
-            let item_text = task_input.value.trim();
-
-            if(task_input !== ""){
-                let li = document.createElement('li');
-                li.textContent = item_text;
-
-                let delBtn = document.createElement('button');
-                delBtn.innerText = 'remove';
-
-                delBtn.addEventListener('click',() =>{
-                    task_list.removeChild(li);
-                })
-
-            li.appendChild(delBtn);
-                task_list.appendChild(li);
-
-                task_input.value = "";
-            }
-        })
 
 
 
-    </script>
+
+
+    <script src="script.js"></script>
 </body>
 </html>
